--- a/index.html
+++ b/index.html
@@ -1,79 +1,85 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>VICHYY USA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>VICHYY | Dermatologist Inspired Skincare</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo">VICHYY</div>
-    <nav>
-        <a href="#shop">Shop</a>
-        <a href="#about">About</a>
-        <a href="#science">Science</a>
-        <a href="#contact">Contact</a>
-    </nav>
+  <div class="logo">VICHYY</div>
+  <nav>
+    <a href="#">Shop</a>
+    <a href="#">Science</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
 </header>
 
+<!-- HERO -->
 <section class="hero">
-    <div class="hero-text">
-        <h1>Dermatologist-Inspired Skincare</h1>
-        <p>Advanced formulas. Clean ingredients. Visible results.</p>
-        <a href="#shop" class="btn">Shop Now</a>
-    </div>
+  <div class="hero-overlay">
+    <h1>Mineral-Powered Skin Science</h1>
+    <p>Hydrate. Strengthen. Protect.</p>
+    <button>Shop Now</button>
+  </div>
 </section>
 
-<section id="shop" class="products">
-    <h2>Best Sellers</h2>
-    <div class="product-grid">
-        <div class="product-card">
-            <h3>Hydrating Mineral Serum</h3>
-            <p>$39.00</p>
-            <button>Add to Cart</button>
-        </div>
-        <div class="product-card">
-            <h3>Fortifying Daily Moisturizer</h3>
-            <p>$45.00</p>
-            <button>Add to Cart</button>
-        </div>
-        <div class="product-card">
-            <h3>SPF 50 Invisible Shield</h3>
-            <p>$32.00</p>
-            <button>Add to Cart</button>
-        </div>
-    </div>
+<!-- FEATURE STRIP -->
+<section class="features">
+  <div>Dermatologist Tested</div>
+  <div>Clean Formulas</div>
+  <div>Clinically Proven Results</div>
 </section>
 
-<section id="science" class="values">
-    <h2>The Vichyy Difference</h2>
-    <div class="value-grid">
-        <div>
-            <h3>Dermatologist Tested</h3>
-            <p>Formulated with clinical research and skin barrier science.</p>
-        </div>
-        <div>
-            <h3>Hydration Powered</h3>
-            <p>Infused with mineral-rich ingredients for lasting moisture.</p>
-        </div>
-        <div>
-            <h3>Visible Results</h3>
-            <p>Clinically proven to improve skin texture and glow.</p>
-        </div>
+<!-- BEST SELLERS -->
+<section class="products">
+  <h2>Best Sellers</h2>
+
+  <div class="product-grid">
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1617897903246-719242758050?q=80&w=1200" alt="">
+      <h3>Hydrating Mineral Serum</h3>
+      <p>$39.00</p>
+      <button>Add to Cart</button>
     </div>
+
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1596755389378-c31d21fd1273?q=80&w=1200" alt="">
+      <h3>Barrier Repair Cream</h3>
+      <p>$45.00</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1600185365483-26d7a4cc7519?q=80&w=1200" alt="">
+      <h3>SPF 50 Invisible Shield</h3>
+      <p>$32.00</p>
+      <button>Add to Cart</button>
+    </div>
+  </div>
 </section>
 
-<section id="contact" class="newsletter">
-    <h2>Join the Vichyy Glow Club</h2>
-    <input type="email" placeholder="Enter your email">
-    <button>Subscribe</button>
+<!-- SCIENCE SECTION -->
+<section class="science">
+  <div class="science-text">
+    <h2>Powered by Clinical Innovation</h2>
+    <p>
+      Formulated with mineral-rich actives and dermatologist-backed research,
+      Vichyy strengthens the skin barrier while delivering visible hydration.
+    </p>
+  </div>
+  <div class="science-image"></div>
+</section>
+
+<!-- LUXURY SECTION -->
+<section class="luxury">
+  <h2>Minimal. Effective. Elevated.</h2>
 </section>
 
 <footer>
-    <p>© 2026 VICHYY USA. All rights reserved.</p>
+  © 2026 VICHYY USA. All rights reserved.
 </footer>
 
 </body>
